# S21_Backend_3

./: .gitignore  README.md  README_RUS.md
src/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yaml  init-db.sql  start.sh  start_without_migrations.sh
src/app/: Makefile  alembic.ini  example.env  main.py  pyproject.toml  requirements.txt
src/app/api/: dependencies.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: client.py  health.py  images.py  products.py  supplier.py
src/app/app/: app.py
src/app/core/: config.py
src/app/db/: session.py
src/app/db/migration/: env.py
src/app/db/migration/versions/: 2024-12-19_init.py  2024-12-22_delete_fk.py  2024-12-22_final.py  2024-12-22_nullable_true.py  2024-12-22_retern_fk.py  2024-12-22_suppler_nulable_fields.py
src/app/models/: __init__.py  address.py  client.py  images.py  product.py  supplier.py
src/app/repositories/: __init__.py  address.py  base.py  client.py  images.py  product.py  supplier.py
src/app/schemas/: __init__.py  address.py  client.py  errors.py  images.py  product.py  supplier.py
src/app/services/: client.py  image.py  suppler.py
src/app/tests/: conftest.py  test_health.py
src/app/utils/: common.py  setup_logging.py
src/nginx/: nginx.conf
src/nginx/templates/: nginx.conf.template
src/ssl/: shop.crt  shop.key  ssl.md
src/static/: index.html
