[tool.poetry]
package-mode = false
name = "Shop API"
version = "0.1.0"
description = ""
authors = ["klotzgal <ggg44466635@gmail.com>"]
readme = "../README_RUS.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"
httpx = "0.26.0"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
per-file-ignores = {'__init__.py' = ['F401']}

[tool.pytest.ini_options]
pythonpath = '.'
asyncio_mode = 'auto'
python_files = ['test_*.py', '*_test.py', '*_tests.py']
log_cli = true
log_cli_level = 'INFO'
